# url_shortner

./: README.md  app.py  env.example  pyproject.toml  requirements.txt  test.py
conf/: config.yaml
migrations/: env.py
migrations/versions/: f4f25368986d_init.py
src/: db.py  models.py  routes.py  views.py
src/conf/: settings.py
src/templates/: index.html
